# ButterflyGuy

./: .gitignore  AGENTS.md  CLAUDE.md  CODE_REVIEW_REPORT.md  CODE_REVIEW_STATE.md  Dockerfile  Dockerfile.candidate  README.md  auth_init.py  config.yaml  config_ndx.yaml  config_xsp.yaml  conftest.py  data_sample.md  do-now_gap_plan.md  drill.md  partial-fill-test-plan.md  prelivecheckout.md  pyproject.toml  schwab_token_keepalive.py  todo.md
.claude/: .nfs00000000000676040000005f
.cursor/rules/: graphify.mdc  project-context.mdc
.github/workflows/: code-review.yml  database-smoke.yml  deploy.yml
Fable_refactor/: ACCEPTANCE_TESTS.md  BEHAVIORAL_SPEC.md  CONFIG_MATRIX.md  DATABASE_COMPATIBILITY.md  DOMAIN_MODEL.md  FABLE_REFACTOR_PLAN.md  FIXTURE_MANIFEST.md
configs/: candidates.yaml  config.yaml  config_ndx.yaml  config_spx_candidate.yaml  config_xsp.yaml  daily_report_card.yaml  equity_scan.yaml
configs/universes/: custom.txt  liquid.txt  (+3 more)
docs/: application-architecture.html  application-architecture.json  data-sources-inventory.md  live-runbook.md
graphify-out/: GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
infra/: candidate-alerts.yml  docker-compose.yml  prometheus.yml
reports/: broker_order_statuses_xsp_2026-07-14.json  broker_order_statuses_xsp_2026-07-16.json  exact_sha_deployment_2026-07-15.md  external_alert_delivery_2026-07-15.md  flat_runtime_restart_2026-07-14.md  offline_drills_2026-07-13.md  xsp_manual_flatten_2026-07-16.md
scripts/: set_market_open.sh
tests/: test_backtest_drawdown_schedule.py  test_bias_filter.py  test_black_scholes.py  test_broker_order_intents.py  test_butterfly_builder.py  test_butterfly_selector.py  test_candidate_executor.py  test_candidate_feed.py  test_candidate_fleet_scale.py  test_candidate_image.py  test_candidate_provider.py  test_candidate_registry.py  test_candidate_snapshot.py  test_chain_cache.py  test_comparison_stats.py  test_config.py  test_daily_report_card.py  test_db_dsn_resolution.py  test_decision_log_migration.py  test_discover_options_strategy.py  test_entry_selection.py  test_entry_selection_parity.py  test_equity_scan.py  test_equity_scan_news.py  test_equity_scan_volume.py  test_equity_universes.py  test_exit_mark_parity.py  test_forex_calendar.py  test_gap_regime_filter.py  test_live_performance_report.py  test_metrics_readiness.py  test_migrations.py  test_monitoring_leg_replay.py  test_notifier.py  test_order_builder.py  test_order_manager.py  test_performance_chart.py  test_performance_dashboard.py  test_position_manager.py  test_position_service_settlement.py  (+17 more)
tools/: auth_init.py  health_monitor.py  notify.py  run_live_performance_cron.sh  run_morning_scan_cron.sh  schwab_token_keepalive.py  send_daily_report_card.py  send_weekend_review.py  send_weekly_calendar.py
(+147 files in other folders)
