[project]
name = "butterfly-guy"
version = "0.1.0"
description = "Automated 0-DTE butterfly options trading system for SPX/XSP"
requires-python = ">=3.12"
dependencies = [
    "schwab-py>=1.4.0",
    "httpx>=0.27.0",
    "polars>=1.0.0",
    "psycopg[binary]>=3.2.0",
    "asyncpg>=0.30.0",
    "structlog>=24.0.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "pyyaml>=6.0.0",
    "python-dotenv>=1.0.0",
    "prometheus-client>=0.21.0",
    "scipy>=1.14.0",
    "numpy>=2.0.0",
    "aiohttp>=3.10.0",
    "apscheduler>=3.10.0",
    "tzdata>=2025.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
]
