[project]
name = "butterfly-guy"
version = "0.1.0"
description = "Automated 0-DTE butterfly options trading system for SPX/XSP"
requires-python = ">=3.12"
dependencies = [
    "schwab-py>=1.4.0",
    "httpx>=0.27.0",
    "asyncpg>=0.30.0",
    "structlog>=24.0.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "pyyaml>=6.0.0",
    "python-dotenv>=1.0.0",
    "prometheus-client>=0.21.0",
    "scipy>=1.14.0",
    "aiohttp>=3.13.4",
    "tzdata>=2025.3",
    "yfinance>=0.2.0",
    "curl-cffi>=0.15.0",
    "matplotlib>=3.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/butterfly_guy"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.ruff.lint.per-file-ignores]
# Greek-letter / capital variables are conventional in options math.
"src/butterfly_guy/quant_engine/**/*.py" = ["N806", "N803"]
# Tests use descriptive UPPER_CASE for inputs mirroring the math notation.
"tests/**/*.py" = ["N806", "N803"]
# Scripts in tools/ do sys.path manipulation before imports - E402 is intentional.
# Cron docstrings may legitimately exceed line-length when documenting full paths and redirects.
"tools/**/*.py" = ["E402", "E501"]
# Protected service module; keep lint-only cleanup out of runtime orchestration code.
"src/butterfly_guy/services/chart_data.py" = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.8.0",
]
